--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "Do or compete math with multiple people",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   },
   "author": "Hypenexy",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mathjs": "^11.8.0",
+    "socket.io": "^4.6.1"
+  }
 }
